--- a/css/style.css
+++ b/css/style.css
@@ -2295,6 +2295,11 @@ section.bb-ia p {
     width: 100%;
 }
 
+table, th, td {
+    border: 1px solid black;
+    padding: 10px;
+}
+
 .bb-sketch img {
   width: 100%;
 }
