mobile nav updates

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   color: #DB9034;
 }
 
+a:hover{
+  color: #DB9034;
+}
+
 .topnav {
   float: right;
   padding-top:20px;
@@ -32,6 +36,15 @@
 /*mobile nav*/
 .mobilenav {
   display:none;
+}
+
+
+span.mobilenavs {
+  display: none;
+}
+
+.closebtn {
+  display: none;
 }
 
 i.fa.fa-bars {
@@ -129,6 +142,11 @@ a {
 position: absolute;
 right: 0px;
 text-decoration: none;
+}
+
+.home-link {
+  text-decoration: none;
+  font-weight: bold;
 }
 
 section.projects{
@@ -275,10 +293,13 @@ a.top2 {
 .billow-banner{
   background-color: #F3F5EF;
   padding-left: 80px;
+  padding-bottom: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  border-bottom: 1px solid black;
+}
 }
 
 .billow-banner img {
@@ -310,14 +331,17 @@ section.billow-banner {
   padding-top:80px;
 }
 
+.billow-banner img {
+  width: 50%;
+}
+
 .problem-banner {
   height: 295px;
   padding-left: 40px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
-   border-bottom: 1px solid black;
 }
 
 .p1-container {
@@ -332,10 +356,10 @@ section.billow-banner {
 }
 
 section.solution {
+    background-color:#E3E7D9;
  display: flex;
  flex-direction: column;
  justify-content: center;
- border-bottom: 1px solid black;
 }
 
 .solution h2 {
@@ -680,15 +704,16 @@ section.pref-test h3 {
       padding-top: 20px;
 }
 
-/*.pref-test2 img {
-  padding:20px 10px 40px 10px;
-}*/
+.pref-test2 img {
+width: 50%;
+padding:20px;
+}
 
 .pref-test2 {
   display: flex;
       flex-direction: row;
       justify-content: space-around;
-      width: 100%;
+      width: 50%;
 padding-top: 20px;
 }
 
@@ -1372,10 +1397,10 @@ section.billow-banner {
 }
 
 .billow-banner img {
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-}
+  }
 
 .problem-banner {
     display: flex;
@@ -1383,7 +1408,6 @@ section.billow-banner {
     align-items: center;
     justify-content: center;
     padding: 40px;
-    border-bottom: 1px solid black;
 }
 
 section.solution {
@@ -1391,7 +1415,6 @@ section.solution {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid black;
     padding: 40px;
 }
 
@@ -2040,6 +2063,455 @@ section.f-left {
   display: none;
   }
 
+  /*i.fa.fa-bars {
+    display: block;
+    padding: 20px;
+    text-decoration: none;
+    font-size: 40px;
+  }*/
+
+  /* Style the navigation menu */
+/*.mobilenav {
+  overflow: hidden;
+  background-color: #F3F5EF;
+  position: absolute;
+    right: 20px;
+    top: 90px;
+    width: 140px;
+    z-index: 1;
+}*/
+
+/* Style navigation menu links */
+/*.mobilenav a {
+  color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16px;
+  display: block;
+  font-family: Public Sans;
+  text-transform: uppercase;
+}
+
+/* Style the hamburger menu */
+/*.mobilenav a.icon {
+  background: black;
+  font-size: 16px;
+  text-transform: uppercase;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}*/
+
+/* The Overlay (background) */
+.overlay {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: #F3F5EF; /* Black fallback color */
+  background-color: #F3F5EF; /* Black w/opacity */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+  top: 25%; /* 25% from the top */
+  width: 100%; /* 100% width */
+  text-align: center; /* Centered text/links */
+  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: black;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
+  font-family: Public Sans;
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+span.mobilenavs {
+  display: flex;
+  justify-content: flex-end;
+  padding:20px;
+}
+
+
+.main-banner img {
+  display: none;
+}
+
+.intro-text h1 {
+    width: 100%;
+}
+
+/*home*/
+.b2-container img {
+    width: 100%;
+}
+
+.b2-container {
+    width: 100%;
+}
+
+section.projects {
+    background-color: #F3F5EF;
+    padding-bottom: 20px;
+}
+
+.busybus-image img {
+    width: 100%;
+    align-self: center;
+}
+
+/*billow case study*/
+
+.billow-banner img {
+    width: 50%;
+  }
+
+.b-container p {
+    width: 100%;
+}
+
+.b-container{
+width: 100%;
+}
+
+.problem-banner {
+  height: 100%;
+}
+
+.solution img {
+    align-self: center;
+    width: 50%;
+    padding: 20px;
+}
+
+.p2-container p {
+    width: 100%;
+    padding: 20px;
+}
+
+.solution-p {
+    line-height: 150%;
+    text-align: left;
+    width: 100%;
+    align-self: center;
+    padding: 20px;
+}
+
+.solution img {
+    align-self: center;
+    width: 100%;
+    padding: 20px;
+}
+
+.ur1 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.user-research p {
+    padding-right: 0;
+}
+
+section.user-personas p {
+    align-self: center;
+    width: 100%;
+    padding: 20px;
+}
+
+.mariap-container {
+    width: 100%;
+}
+
+.luisr {
+    width: 100%;
+    margin-left: 0px;
+    padding-top: 20px;
+}
+
+.ia h2 {
+  text-align: center;
+}
+
+section.ia p {
+    width: 100%;
+    padding: 10px;
+}
+
+table {
+    font-family: Public Sans;
+    font-size: 16px;
+    line-height: 150%;
+    margin: 10px;
+    border-color: black;
+}
+
+.table img {
+    width: 100%;
+}
+
+section.ca-section {
+  padding: 20px;
+}
+
+.ca-section p {
+    width: 100%;
+    align-self: center;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.wf-container img {
+    padding: 10px;
+    width: 100%;
+}
+
+.wf-2 p {
+    width: 100%;
+}
+
+section.wireframes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+}
+
+.ut-1 {
+    padding: 20px;
+}
+
+.brand-1 {
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.wf-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    padding: 20px;
+}
+
+section.palette p {
+    width: 100%;
+    padding: 10px;
+}
+
+.billow-brand {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+    width: 100%;
+}
+
+.billow-brand img {
+    width: 100%;
+    justify-content: center;
+    /* align-items: center; */
+    /* align-self: center; */
+}
+
+.hf-mock1 {
+  padding-right: 0px;
+}
+
+section.hf-mock {
+    margin: 0px;
+    border-bottom: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.hf-mock2 img {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    padding-top: 20px;
+}
+
+.pref-test2 img{
+padding:20px;
+width: 100%;
+align-self: center;
+}
+
+section.pref-test {
+    /* margin: 0px; */
+    padding: 20px;
+    border-bottom: 1px solid black;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
+}
+
+section.result p {
+    width: 100%;
+}
+
+section.result {
+  padding: 20px;
+}
+
+section.b-improv {
+    background-color: #CED0CA;
+    margin: 0px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+section.b-improv p {
+    width: 100%;
+}
+
+/*about*/
+.bio h3 {
+    justify-content: center;
+    margin: 0 auto;
+    display: flex;
+    text-align: center;
+}
+
+.bio p {
+  width: 100%;
+    max-width: 100%;
+}
+
+
+/*busybus case study*/
+
+.bb-intro {
+    width: 100%;
+    margin-left: 0px;
+}
+
+.bb-intro h1 {
+    text-align: center;
+    align-self: center;
+    width: 100%;
+}
+
+.bb-intro p {
+    width: 100%;
+    text-align: left;
+}
+
+section.bb-main img {
+    width: 50%;
+    padding-top: 60px;
+}
+
+section.bb-problem p {
+    width: 100%;
+    align-self: center;
+}
+
+section.bb-ia p {
+    width: 100%;
+}
+
+.bb-ia h2 {
+    text-align: center;
+}
+
+table, th, td {
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.bb-sketch img {
+  width: 100%;
+}
+
+/*contact*/
+input {
+    display: block;
+    font-family: Public Sans;
+    color: #e8e8e8;
+    background-color: #F3F5EF;
+    border: 1px solid #000000;
+    padding-left: 10px;
+    margin: 12px;
+    width: 100%;
+    height: 24px;
+    font-size: 12px;
+}
+
+.contact-cta p {
+    width: 100%;
+    text-align: center;
+}
+
+textarea {
+    width: 100%;
+    height: 116px;
+    margin: 12px;
+    padding-left: 10px;
+    font-family: Public Sans;
+    color: black;
+    font-size: 12px;
+    box-sizing: border-box;
+    border: 1px solid #000000;
+    background-color: #F3F5EF;
+    resize: none;
+    padding-top: 10px;
+}
+
+button[type="submit"] {
+    width: 100%;
+    height: 33px;
+    font-size: 16px;
+}
+}
+
+@media screen and (max-width: 414px) {
+
+  .logo {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  .topnav {
+  display: none;
+  }
+
   i.fa.fa-bars {
     display: block;
     padding: 20px;
@@ -2106,7 +2578,7 @@ section.projects {
 /*billow case study*/
 
 .billow-banner img {
-    width: 80%;
+    width: 50%;
   }
 
 .b-container p {
