--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ i.fa.fa-bars {
   display: none;
 }
 
+
 *{
   box-sizing: border-box;
 }
@@ -1132,6 +1133,14 @@ hr.orange-divider {
   align-items: center;
 }
 
+@media (min-width: 1025px) and (max-width: 1280px) {
+
+  .overlay-content {
+     display: none;
+   }
+
+}
+
 @media screen and (max-width: 1025px) {
 /*homepage*/
 
@@ -1164,6 +1173,10 @@ hr.orange-divider {
 
 .topnav a {
 padding: 10px;
+  }
+
+  .overlay-content {
+    display: none;
   }
 
 /*hamburger menu
