--- a/css/style.css
+++ b/css/style.css
@@ -2514,14 +2514,68 @@ button[type="submit"] {
   display: none;
   }
 
-  i.fa.fa-bars {
+  /* The Overlay (background) */
+  .overlay {
+    /* Height & width depends on how you want to reveal the overlay (see JS below) */
+    height: 100%;
+    width: 0;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    background-color: #F3F5EF; /* Black fallback color */
+    background-color: #F3F5EF; /* Black w/opacity */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+  }
+
+  /* Position the content inside the overlay */
+  .overlay-content {
+    position: relative;
+    top: 25%; /* 25% from the top */
+    width: 100%; /* 100% width */
+    text-align: center; /* Centered text/links */
+    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+  }
+
+  /* The navigation links inside the overlay */
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: black;
+    display: block; /* Display block instead of inline */
+    transition: 0.3s; /* Transition effects on hover (color) */
+    font-family: Public Sans;
+  }
+
+  /* When you mouse over the navigation links, change their color */
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+
+  /* Position the close button (top right corner) */
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+
+  span.mobilenavs {
+    display: flex;
+    justify-content: flex-end;
+    padding:20px;
+  }
+
+/*  i.fa.fa-bars {
     display: block;
     padding: 20px;
     text-decoration: none;
     font-size: 40px;
   }
 
-  /* Style the navigation menu */
+  /* Style the navigation menu
 .mobilenav {
   overflow: hidden;
   background-color: #F3F5EF;
@@ -2532,7 +2586,7 @@ button[type="submit"] {
     z-index: 1;
 }
 
-/* Style navigation menu links */
+/* Style navigation menu links
 .mobilenav a {
   color: black;
   padding: 14px 16px;
@@ -2543,7 +2597,7 @@ button[type="submit"] {
   text-transform: uppercase;
 }
 
-/* Style the hamburger menu */
+/* Style the hamburger menu
 .mobilenav a.icon {
   background: black;
   font-size: 16px;
@@ -2552,7 +2606,9 @@ button[type="submit"] {
   position: absolute;
   right: 0;
   top: 0;
+
 }
+*/
 
 .main-banner img {
   display: none;
@@ -2911,6 +2967,12 @@ section.contact-cta {
   flex-direction: column;
   float: right;
 }
+}
+
+@media (min-width: 376px) {
+  .overlay-content {
+    display: none;
+  }
 }
 
 @media (min-width: 375px) {
