--- a/css/style.css
+++ b/css/style.css
@@ -2501,3 +2501,9 @@ button[type="submit"] {
     font-size: 16px;
 }
 }
+
+@media only screen and (min-width: 768px) {
+  .overlay-content{
+    display:none;
+  }
+}
