--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,14 @@ h4 {
   font-size: 20px;
 }
 
+ul {
+  list-style-type: square;
+  font-family: Public Sans;
+  font-size: 1rem;
+  line-height: 125%;
+margin-top: .5rem;
+}
+
 html {
   background-color: #F3F5EF;
   /*font-size: 20px;*/
@@ -398,6 +406,15 @@ padding: 20px;
   justify-content: center;
   padding: 60px;
   border-bottom: 1px solid black;
+}
+
+.insights1{
+  background-color: #418AD5;
+color: white;
+      margin-bottom: 40px;
+      position: relative;
+      padding: 70px 40px 44px;
+      overflow: hidden;
 }
 
 .user-research img {
@@ -1442,6 +1459,7 @@ section.solution {
 .user-research p {
     padding-right: 0;
 }
+
 
 .ur1 {
     display: flex;
