--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,26 @@ color: white;
       position: relative;
       padding: 70px 40px 44px;
       overflow: hidden;
+      display: flex;
+      flex-direction: row;
+}
+
+.i1 {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.i2 {
+  display: flex;
+  flex-direction: column;
+  padding:20px;
+}
+
+
+.i3 {
+  display: flex;
+  flex-direction: column;
 }
 
 .user-research img {
