--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,7 @@ table {
   height: 228px;
 }
 
-.user-flow img {
+.user-flows {
   width: 400px;
 }
 
@@ -611,10 +611,8 @@ section.ca-section {
 }
 
 .ca-section p {
-  width: 95%;
-  padding-left: 356px;
-  padding-right: 332px;
-  padding-bottom: 20px;
+  width: 60%;
+align-self: center;
 }
 
 .ca-section h3 {
@@ -675,7 +673,7 @@ section.wireframes a {
  }
 
  .brand-1 p {
-   width: 1100px;
+   width: 60%;
  }
 
  .brand-1 h3 {
@@ -767,6 +765,10 @@ section.hf-mock p {
 
 .hf-mock1 {
   padding-right: 40px;
+}
+
+.hf-mock1 li {
+width: 70%;
 }
 
 .hf-mock1 h3 {
@@ -2371,9 +2373,10 @@ table {
     border-color: black;
 }
 
-/*.user-flows img {
-    width: 100%;
-}*/
+.user-flow img {
+    width: 60%;
+    padding: 20px;
+}
 
 section.ca-section {
   padding: 20px;
